mule-user-guide/v/3.9/ibm-ctg-connector.adoc
=  IBM CICS Transaction Gateway连接器
:keywords: user manual, ibm ctg, cics, jca, connector

_Premium_

IBM CICS Transaction Gateway（IBM CTG）连接器使用CICS Transaction Gateway提供与后端CICS应用程序的集成。对于Java平台，CTG实现JCA资源适配器以将Java应用程序连接到CICS系统。该连接器提供Mule应用程序与CTG之间的访问。

看到：

link:/release-notes/ibm-ctg-connector-release-notes[连接器发行说明] +
https://mulesoft.github.io/mule-ibm-ctg-connector/[Technical Reference] +
https://www.anypoint.mulesoft.com/exchange/org.mule.modules/mule-ibmctg-connector/[Anypoint Exchange]

== 先决条件

本文档假定您熟悉Mule，Anypoint连接器和Anypoint Studio基本要素。此外，本页假定您对骡流中的元素和全局元素有基本的了解。

=== 关于IBM CICS

*  CICS（客户信息控制系统）：一套企业应用程序服务器，支持高安全性，可扩展性和经济高效的环境中的高事务性工作负载。 CICS应用程序使用各种语言编写，从Java到COBOL。
*  CICS区域：由CICS作为一个单元控制的资源的命名集合。 CICS资源是执行任务所需的任何CICS系统的设施或组件。
*  CICS TG（CICS Transaction Gateway）：允许远程客户端应用程序调用CICS区域中的服务的一组客户端和服务器软件组件。客户端应用程序可以是Java应用程序，也可以是非Java应用程序。 CICS TG可通过以下两种产品获得：z / OS上的CICS TG和多平台上的CICS TG
*  COMMAREA：用于在程序之间传递数据的连续内存块。它是COBOL结构的二进制等价物，它是基于字符的。
*  ECI（外部调用接口）：简单的远程过程调用样式接口，用于链接到CICS应用程序。 COMMAREA或通道是用于在客户端应用程序和CICS之间交换数据的数据接口。
*  JCA：用于将J2EE平台连接到异构企业信息系统（EIS）（如CICS）的标准体系结构。 JCA使EIS供应商能够为其EIS提供标准资源适配器。资源适配器是Java应用程序和EIS之间的中间层，并将Java应用程序连接到EIS。

[[install]]
== 安装此连接器

. 在Anypoint Studio中，点击Studio任务栏中的Exchange图标。
. 点击Anypoint Exchange中的登录。
. 搜索此连接器并单击安装。
. 按照提示安装连接器。

=== 从较旧版本更新

当发布连接器的更新版本时，Anypoint Studio会在Studio的右下角显示“更新可用”弹出窗口。点击弹出窗口并安装新版本。

[[ns-schema]]
== 关于连接器命名空间和架构

在Anypoint Studio中，当您将连接器从面板拖放到Anypoint Studio画布上时，Studio会自动使用连接器命名空间和模式位置填充XML代码。

*Namespace:* `+http://www.mulesoft.org/schema/mule/ibm-ctg+` +
*Schema Location:* `+http://www.mulesoft.org/schema/mule/connector/current/mule-ibm-ctg.xsd+`

如果要在Studio的XML编辑器或其他文本编辑器中手动编码Mule应用程序，请在`<mule>`标记内的Configuration XML标题中定义名称空间和模式位置。

[source, xml,linenums]
----
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:ibm-ctg="http://www.mulesoft.org/schema/mule/ibm-ctg"
      xsi:schemaLocation="
               http://www.mulesoft.org/schema/mule/core
               http://www.mulesoft.org/schema/mule/core/current/mule.xsd
               http://www.mulesoft.org/schema/mule/ibm-ctg
               http://www.mulesoft.org/schema/mule/ibm-ctg/current/mule-ibm-ctg.xsd">

      <!-- put your global configuration elements and flows here -->

</mule>
----

*Note:*在架构路径中使用`current`。 Studio将此解释为当前的Mule版本。

[[maven]]
== 关于Maven依赖关系信息

对于Maven依赖关系管理，请将此XML片段包含在您的`pom.xml`文件中。

[source,xml,linenums]
----
<dependency>
  <groupId>org.mule.modules</groupId>
  <artifactId>mule-ibmctg-connector</artifactId>
  <version>1.1.0</version>
</dependency>
----

在`<version>`标签内放置所需的版本号。


[[configure]]
== 进行配置

根据您的使用情况，将连接器放入流中。

要在Mule应用程序中使用IBM CTG连接器，请配置可由连接器使用的全局IBM CTG配置元素。

IBM CTG连接器提供以下全局配置：

[%header,cols="25a,75a"]
|===
| {字段{1}}说明
|主机 | 输入CICS TG的主机名。
|端口 | 输入CICS TG运行的端口。默认值是2006。
|服务器名称 |输入CICS TG配置文件中定义的目标CICS服务器的名称。可选的。
|用户名 |输入CICS用户标识。可选，如果CICS区域中未启用安全性。
|密码 |输入CICS用户标识的密码。可选，如果CICS区域中未启用安全性。
|密钥库位置 |输入包含SSL连接所需证书的密钥库位置。可选的。
|密钥库密码 |输入访问SSL连接密钥库所需的密码。可选的。
|连接超时 |输入与CTG连接的套接字超时。默认值为0（无超时）。
| CTG跟踪 |如果选中，则会打开CTG跟踪的所有调试级别。默认值为false。
|必需的依赖关系 |

*  ccf2.jar（CICS通用连接器框架）
*  cicsjee.jar（CICS JEE）
*  ctgclient.jar（CTG客户端库）
*  ctgserver.jar（CTG服务器库）
* 的geronimo-J2EE的connector_1.6_spec-1.0.jar

*Note:*使用捆绑在CTG服务器安装中的JAR文件，而不是从IBM网站下载SDK ZIP，以确保连接器和CTG系统之间的兼容性。
|===

image:ibm-ctg-global-el-props.png[IBM-CTG-全球-EL-道具]

[[operations]]
== 关于操作

IBM CTG连接器支持以下四种操作：

[%header%autowidth.spread]
|===
| {名称{1}}说明
|执行 |调用包含数据封装为通道和容器的CICS程序。
|使用COMMAREA  |执行调用包含数据封装为COMMAREA的CICS程序。请求被限制为最大32 KB。
|使用多个通道执行 |使用多个通道和容器调用CICS程序。
|创建ChannelAndContent实例 |创建ChannelAndContent的实例以用于"Execute with multiple channels"操作的输入列表。
|===

== 用例

*  xref：use-case-1 [调用COMMAREA程序]
*  xref：use-case-2 [调用频道节目]
*  xref：use-case-3 [在事务范围内调用COMMAREA或Channel程序]
*  xref：use-case-4 [调用具有多个请求的频道节目]
*  xref：use-case-5 [添加自定义元数据]
*  xref：use-case-6 [加载Java元数据]

要成功运行用例1到3，调用的CICS程序必须在目标CICS系统上可用。

[[use-case-1]]
== 使用案例1：调用COMMAREA程序

此应用程序调用EC01，这是一个基于COMMAREA的程序，它以格式化的EBCDIC字符串输出当前日期时间。

image:ibm-ctg-use-case-1.png[IBM-CTG-用例1]

. 在Anypoint Studio中创建一个新的Mule项目，并在`src/main/resources/mule-app.properties`中填写IBM CTG凭据。
+
[source,code,linenums]
----
ctg.host=<HOST>
ctg.port=<PORT>
ctg.serverName=<SERVER_NAME>
ctg.username=<USERNAME>
ctg.password=<PASSWORD>
----
+
. 将HTTP连接器拖到画布上，并保留主机和端口的默认值，并将路径设置为`/test/ec01`。
+
. 将IBM CTG组件拖放到画布上，并添加新的全局元素以配置标准（非SSL）连接。
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|主机| `${ctg.host}`
|端口| `${ctg.port}`
|服务器名称| `${ctg.serverName}`
|用户名| `${ctg.username}`
|密码| `${ctg.password}`
|===
+
单击测试连接以确认Mule可以连接IBM CTG实例。如果连接成功，请单击确定以保存配置。否则，请查看或更正任何无效参数并再次测试。
+
. 双击IBM CTG组件，选择执行操作并配置以下参数：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|内容参考 |  `#[payload]`
|请求参考 |  `#[flowVars.commareaRequest]`
|===
+
. 在HTTP和IBM CTG组件之间添加转换消息。连接器不提供动态/静态元数据，但允许用户使用元数据类型工具定义自定义类型。
+
.. 根据部分xref：use-case-4 [添加自定义元数据]使用模式文件`ec01-type.ffd`定义输入元数据：
+
[source,code,linenums]
----
form: COPYBOOK
id: 'DFHCOMMAREA'
values:

- { name: 'LK-DATE-OUT', type: String, length: 8 }
- { name: 'LK-SPACE-OUT', type: String, length: 1 }
- { name: 'LK-TIME-OUT', type: String, length: 8 }
- { name: 'LK-LOWVAL-OUT', type: String, length: 1 }
----
+
.. 映射DataWeave转换器中的字段。
+
[source,code,linenums]
----
%dw 1.0
%output text/plain schemaPath = "ec01-type.ffd", segmentIdent = "DFHCOMMAREA", encoding="cp037"
---
[{
    LK-DATE-OUT: "",
    LK-SPACE-OUT: "",
    LK-TIME-OUT: "",
    LK-LOWVAL-OUT: ""
}]
----
+
.. 创建一个名为`commareaRequest`的flowVar并配置以下字段（请参见xref：use-case-5 [Load Java Metadata]部分）：
+
[source,code,linenums]
----
%dw 1.0
%output application/java
---
{
  commareaLength: 18,
  encoding: "IBM037",
  programName: "EC01",
  replyLength: 18,
  tpnName: "CSMI"
} as :object {
  class : "org.mule.modules.ibmctg.internal.model.CommareaRequest"
}
----
+
请参阅xref：use-case-5 [加载Java元数据]以获取CommareaRequest的元数据。
+
. 在IBM CTG之后添加转换消息，以JSON格式提取结果。
+
[source,code,linenums]
----
%dw 1.0
%output application/json
---
{
  date: payload[0].LK-DATE-OUT,
  time: payload[0].LK-TIME-OUT
}
----
+
. 在流程末尾添加记录器。
. 保存更改并部署Mule应用程序。打开浏览器并向`+http://localhost:8081/ec01+`发送请求。结果应该类似于：
+
[source,code]
----
{
    date: "06/09/17",
    time: "13:41:17"
}
----

[[use-case-2]]
=== 使用案例2：调用频道节目

此应用程序调用EC03，这是一个基于通道的程序，它接受输入数据容器并返回这些容器：

* 数据和时间容器。
* 输入数据和返回的长度在CICS程序中使用通道和容器。
* 包含输入数据副本或错误消息的输出容器。

image:ibm-ctg-use-case-2.png[IBM-CTG-用例2]

. 执行上一个示例中的步骤1至3，并将HTTP路径设置为`/ec03`。
. 双击IBM CTG组件，选择操作执行并配置以下参数：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|内容参考 |  `#[payload]`
|请求参考 |  `#[flowVars.request]`
|===
+
. 在HTTP和IBM CTG组件之间添加转换消息。
.. 根据部分xref：use-case-4 [添加自定义元数据]使用模式文件`ec03-type.ffd`定义输入元数据：
+
[source,code,linenums]
----
form: COPYBOOK
id: 'DFHCOMMAREA'
values:
- { name: 'CICS-DATE-TM', type: String, length: 8 }
----
.. 映射DataWeave转换器中的字段。
+
[source,code,linenums]
----
%dw 1.0
%output text/plain schemaPath = "ec03-type.ffd", segmentIdent = "DFHCOMMAREA", encoding="cp037"
---
[{
  CICS-DATE-TM: ""
}]
----
+
.. 创建一个名为`request`的flowVar并配置以下字段（请参见xref：use-case-5 [Load Java Metadata]部分）：
+
[source,code,linenums]
----
%dw 1.0
%output application/java
---
{
  channel: "EC03",
  encoding: "US-ASCII",
  errorContainer: "OUTPUTMESSAGE",
  programName: "EC03",
  requestContainer: "INPUTDATA",
  responseContainer: "CICSDATETIME",
  tpnName: "CSMI"
} as :object {
  class : "org.mule.modules.ibmctg.internal.model.ChannelRequest"
}
----
+
. 在IBM CTG之后添加一个转换消息器，将结果转换为可读格式。
. 在流程末尾添加记录器。
. 保存更改并部署Mule应用程序。打开浏览器并向`+http://localhost:8081/ec03+`发送请求。结果应该类似于：
+
[source,code]
----
{
   cics-date-time: "06/09/2017 13:57:25"
}
----

[[use-case-3]]
=== 使用案例3：在事务范围内调用COMMAREA或Channel程序

此应用程序调用EC02，这是一个基于COMMAREA的程序，它返回一个简单的运行计数器。

image:ibm-ctg-use-case-3.png[IBM-CTG-用例3]

. 执行上一个示例中的步骤1至3，并将HTTP路径设置为`/test/ec02`。
. 在全局元素选项卡中，添加一个新的Bitronix事务管理器，无需进一步配置。
. 将一个Transactional元素拖放到HTTP旁边并根据下表进行配置：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|输入 | `XA Transaction`
|操作 |  `BEGIN_OR_JOIN`
|===
+
. 双击IBM CTG组件，选择使用COMMAREA执行的操作并配置以下参数：
+
[%header%autowidth.spread]
|===
| {参数{1}}值
|内容参考 |  `#[payload]`
|请求参考 |  `#[flowVars.request]`
|===
+
. 在HTTP和IBM CTG组件之间添加转换消息。连接器不提供动态或静态元数据，但允许用户使用元数据类型工具定义自定义类型。
.. 根据部分xref：use-case-4 [添加自定义元数据]使用模式文件`ec02-type.ffd`定义输入元数据：
+
[source,code,linenums]
----
form: COPYBOOK
id: 'DFHCOMMAREA'
values:
- { name: 'LK-COUNT', type: String, length: 40 }
----
+
.. 映射DataWeave转换器中的字段。
+
[source,code,linenums]
----
%dw 1.0
%output text/plain schemaPath = "ec02-type.ffd" , segmentIdent = "DFHCOMMAREA", encoding="cp037"
---
[{
  LK-COUNT: "000001234TH RUN OF EC02"
}]
----
+
.. 创建一个名为`request`的flowVar并配置以下字段（请参见xref：use-case-5 [Load Java Metadata]部分）：
+
[source,code,linenums]
----
%dw 1.0
%output application/java
---
{
  commareaLength: 18,
  encoding: "IBM037",
  programName: "EC01",
  replyLength: 18,
  tpnName: "CSMI"
} as :object {
  class : "org.mule.modules.ibmctg.internal.model.CommareaRequest"
}
----
+
. 在IBM CTG之后添加转换消息，以JSON格式提取结果。
+
[source,code,linenums]
----
%dw 1.0
%output application/json
---
{
  count: trim payload[0].LK-COUNT,
  lowVal: payload[0].LK-LOWVAL
}
----
+
. 在流程末尾添加记录器。
. 保存更改，部署Mule应用程序。打开浏览器并向`+http://localhost:8081/ec02+`发送请求。结果应该类似于：
+
[source,code]
----
{
    count: "000001235TH RUN OF EC02",
    lowVal: null
}
----


[[use-case-4]]
=== 用多个请求调用频道节目

此应用程序调用EC03，这是一个基于通道的程序，它接受一个输入数据容器并返回三个容器：

* 数据和时间容器。
* 输入数据的长度和返回值在CICS程序中使用通道和容器。
* 包含输入数据副本或错误消息的输出容器。

image:ctg-use-case-4.png[用例4]

. 执行上述示例中的步骤1至3，并将HTTP路径设置为`/multiChannel`。
. 双击IBM CTG组件，选择“使用多个通道执行”操作并配置以下参数：
+
[%header%autowidth]
|===
| {参数{1}}值
|编码 |  `US-ASCII`
|频道和内容列表参考 |  `#[payload]`
|===
+
. 在HTTP和IBM CTG组件之间添加转换消息。
.. 在有效负载中，使用模式文件ec03-type.ffd来完成内容的字段：
+
[source,code,linenums]
----
%dw 1.0
%output text/plain schemaPath = "ec03-type.ffd", segmentIdent = "DFHCOMMAREA", encoding="cp037"
---
[{
	CICS-DATE-TM: ""
}]
----
+
.. 创建一个名为`request`的flowVar并配置以下字段（请参阅<<Load Java Metadata>>部分）：
+
[source,code,linenums]
----
%dw 1.0
%output application/java
---
{
	channel: "EC03",
	encoding: "US-ASCII",
	errorContainer: "OUTPUTMESSAGE",
	programName: "EC03",
	requestContainer: "INPUTDATA",
	responseContainer: "CICSDATETIME",
	tpnName: "CSMI"
} as :object {
	class : "org.mule.modules.ibmctg.internal.model.ChannelRequest"
}
----
+
. 在转换消息后添加IBM CTG组件，然后选择创建ChannelAndContent实例操作：
.. 在内容引用中设置＃[有效内容]引用。
.. 在请求参考中设置＃[flowVars.request]引用。
.. 在目标属性中设置变量的名称（例如，ChannelAndContent1），其中操作结果保存新的ChannelAndContent实例。

. 在上一个组件之后，添加与步骤3的内容相同的其他*Transform Message*。
. 在上一次转换消息之后，添加其他*IBM CTG*组件并选择Create ChannelAndContent Instance操作：
.. 在内容参考中设置`#[payload]`参考。
.. 在请求参考中设置`#[flowVars.request]`参考。
.. 在目标属性中设置变量的名称（例如，ChannelAndContent2），其中操作结果保存新的ChannelAndContent实例。

. 在之前的IBM Component之后，添加其他将ChannelAndContent存储在List中的Transform Message，该List是操作"Execute with multiple channels"的输入：
+
[source,code]
----
%dw 1.0
%output application/java
---
[
	flowVars.ChannelAndContent1,
	flowVars.ChannelAndContent2
]
----
+
. 在IBM CTG Multiple Channel之后添加转换消息，将结果转换为可读格式。
. 在流程末尾添加记录器。
. 保存更改并部署Mule应用程序。打开浏览器并向`+http://localhost:8081/multiChannel+`发送请求。结果应该类似于：
+
[source,code]
----
{
  "cics-date-time": [
    "20/03/2018 10:57:56",
    "20/03/2018 10:57:56"
  ]
}
----


[[use-case-5]]
=== 使用案例5：添加自定义元数据

IBM CTG连接器不提供动态或静态的元数据，但允许用户使用元数据类型工具定义自定义类型。按照以下指南定义输入和输出元数据：

. 将架构文件放置在`src/main/resources`目录下，通常采用`.ffd`格式。
+
这些模式文件必须由用户提供。它们可以从CICS安装中包含的COBOL副本获得。
+
. 转至连接器操作的“元数据”选项卡，然后单击添加元数据按钮。
 选择`Input:Payload`并点击编辑图标以打开de元数据编辑器。
+
image:ibm-ctg-use-case-4-1.png[IBM-CTG-用例4-1]
. 点击添加创建一个新类型并为其提供ID（即`EC01`输入数据的`ec01-in-type`）。
. 选择类型Copybook，然后选择Schema并提供模式文件的位置。
. 这将填充一个包含可用数据段列表的下拉列表。选择你需要的，然后点击选择按钮来保存配置。
+
image:ibm-ctg-use-case-4-2.png[IBM-CTG-用例4-2]
. 在IBM CTG组件之前拖放DataWeave转换器。元数据字段将可用于构建映射。
+
image:ibm-ctg-use-case-4-3.png[IBM-CTG-用例4-3]

元数据定义不是使用IBM CTG连接器的必需步骤，但它对于提高连接器的可用性至关重要。有关更多信息，请参阅 link:/anypoint-studio/v/6/defining-metadata[定义元数据]。

[[use-case-6]]
=== 使用案例6：加载Java元数据

在DataWeave中，单击定义元数据以打开元数据窗口。

. 单击添加并提供一个ID，如CommareaRequest。
. 在Data Structure表中选择Java类型，然后选择Java对象。
. 搜索类CommareaRequest（或完全限定名`org.mule.modules.ibmctg.internal.model.CommareaRequest`），然后单击确定。
+
image:ibm-ctg-use-case-5.png[IBM-CTG-用例5]
+
. 单击选择按钮保存配置。
. 执行相同的步骤为`ChannelRequest`类型加载元数据。

== 连接器性能

要手动定义连接器的连接配置文件，请访问连接器的适用全局元素中的连接配置文件选项卡。

有关池的背景信息，请参阅 link:/mule-user-guide/v/3.9/tuning-performance[调整性能]。

== 另请参阅

* 访问 link:/release-notes/ibm-ctg-connector-release-notes[IBM CICS Transaction Gateway连接器发行说明]。
*  IBM的https://www.ibm.com/support/knowledgecenter/SSGMCP_5.3.0/com.ibm.cics.ts.java.doc/topics/dfhpjpart2.html [为CICS开发Java应用程序]。
在https://www.ibm.com/developerworks/java/tutorials/j-jca/j-jca.html [J2EE连接器体系结构介绍]中*  JCA的高级教程。
*  http://www.redbooks.ibm.com/Redbooks.nsf/domains/zsoftware?Open[IBM大型机红皮书]。
